update tmux conf

--- a/other_sh/config/tmux.conf
+++ b/other_sh/config/tmux.conf
@@ -31,30 +31,36 @@ bind '%' split-window -c '#{pane_current_path}'
 ## <prefix>Esc 进入拷贝模式， v后可以选择拷贝文本, y确定拷贝文本
 ## <prefix>p 粘帖文本
 bind Escape copy-mode
-bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
-#bind -t vi-copy v begin-selection
-#bind -t vi-copy y copy-selection
+#bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+#bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
+# or
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-selection
 unbind p
 bind p pasteb
 setw -g mode-keys vi
 
 ## mouse mode set
-#setw -g mode-mouse on
-#set -g mouse-select-pane on
-#set -g mouse-resize-pane on
-#set -g mouse-select-window on
+setw -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
 ## if error, use below
-set -g mouse on
+#set -g mouse on
+
+## 禁止windows name 自动修改
+set-option -g allow-rename off
 
 ### ------------------------- How to use
 
 ## open a exist session : $ tmux a -t session_name
 ## list exit session : $ tmux ls
 
-## rename session : <prefix>$
-## create a window : <prefix>c
-## vertical spilt window : <prefix>"
-## horizontal split window : <prefix>%
-## quit session : <prefix>d
+## rename session: <prefix>$
+## rename window: <prefix>,
+## create a window: <prefix>c
+## vertical spilt window: <prefix>"
+## horizontal split window: <prefix>%
+## quit session: <prefix>d
+## kill windows: <prefix>&
 ## show shortcut : <prefix>?
